Add Aeron IPC transport, command journal replay, and non-blocking submit paths